---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: ???
  Changes:
    - Forked Sea Block
    - Updated to 1.1
---------------------------------------------------------------------------------------------------
Version: 0.4.8
Date: 18. 8. 2020
  Changes:
    - Extra check for crash site disable remote call
---------------------------------------------------------------------------------------------------
Version: 0.4.7
Date: 18. 8. 2020
  Changes:
    - Disable factorio 1.0 crash landing freeplay start
    - Always enable kovarex enrichment tech
    - Redundant normal/expensive recipe handling
---------------------------------------------------------------------------------------------------
Version: 0.4.6
Date: 5. 7. 2020
  Changes:
    - Check autoplace controls are unused before removing
---------------------------------------------------------------------------------------------------
Version: 0.4.5
Date: 30. 5. 2020
  Changes:
    - Adjust blue algae tech requirements back down to green science
    - Add thermal water recipe for use with thermal bore
    - Move jivolite and crotinum ore crystallization unlocks to Advanced mechanical refining
---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: 8. 3. 2020
  Changes:
    - Add extra fluid output to extended angels washing plants if present
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 1. 3. 2020
  Changes:
    - Adjust electronics tech prerequisites
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 24. 2. 2020
  Changes:
    - Update for recent Angel's changes: crystallization icons, solder smelting
    - Remove extra crystallization recipes (uranium, chrome etc)