@@ -4,6 +4,8 @@ Date: ???
   Changes:
     - Forked Sea Block
     - Updated to 1.1
+    - Map settings Enemy Evolution and Expansion hidden
+    - Worms will only spawn if map setting Enemy Bases is enabled
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.8
 Date: 18. 8. 2020
